WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66109
VectorArgumentCoder doesn't encode/decode enough data for more than one byte vector elements
https://bugs.webkit.org/show_bug.cgi?id=66109
Summary
VectorArgumentCoder doesn't encode/decode enough data for more than one byte ...
Viatcheslav Ostapenko
Reported
2011-08-11 15:45:54 PDT
VectorArgumentCoder calls encodeFixedLengthData and decodeFixedLengthData with "size" bytes to encode/decode . It should encode/decode "size * sizeof(T)" bytes.
Attachments
Give vector data byte size insitead of number of elements to fixed length data encoder/decoder.
(1.87 KB, patch)
2011-08-11 17:36 PDT
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Viatcheslav Ostapenko
Comment 1
2011-08-11 17:36:45 PDT
Created
attachment 103712
[details]
Give vector data byte size insitead of number of elements to fixed length data encoder/decoder.
Anders Carlsson
Comment 2
2011-08-11 20:00:25 PDT
Comment on
attachment 103712
[details]
Give vector data byte size insitead of number of elements to fixed length data encoder/decoder. Good catch.
WebKit Review Bot
Comment 3
2011-08-11 21:17:07 PDT
Comment on
attachment 103712
[details]
Give vector data byte size insitead of number of elements to fixed length data encoder/decoder. Clearing flags on attachment: 103712 Committed
r92914
: <
http://trac.webkit.org/changeset/92914
>
WebKit Review Bot
Comment 4
2011-08-11 21:17:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug