VectorArgumentCoder doesn't encode/decode enough data for more than one byte vector elements https://bugs.webkit.org/show_bug.cgi?id=66109

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-08-11
Reviewed by Anders Carlsson.

Multiply vector size by element size in encode/decode to get correct byte size of vector data.

* Platform/CoreIPC/ArgumentCoders.h:

Canonical link: https://commits.webkit.org/81973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92914 268f45cc-cd09-0410-ab3c-d52691b4dbfc